re re fix tooltip on tablet landscape

--- a/src/styles/override/esri-popup-widget.scss
+++ b/src/styles/override/esri-popup-widget.scss
@@ -14,13 +14,12 @@
   }
 
   @media #{$mobile-landscape} {
-    top: 10px !important;
+    top: 0 !important;
     right: 0px !important;
     margin-left: 30% !important;
-
   }
-  @media #{$tablet-landscape} {
-    top: 10px !important;
+  @media #{$tablet-only} {
+    bottom: auto;
   }
 }
 
